log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Tue May 12 03:28:12 PM UTC 2026: 
 graph.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:5: error: ‘g’ undeclared (first use in this function)
   31 |     g->adjacencyMap= map_create(is_equal_string);
      |     ^
graph.c:31:5: note: each undeclared identifier is reported only once for each function it appears in
ab117e3
Tue May 12 03:28:28 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d709e51
Tue May 12 03:33:11 PM UTC 2026: 
 graph.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
2217756
Tue May 12 03:37:57 PM UTC 2026: 
 graph.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:51:28: error: ‘pair’ undeclared (first use in this function); did you mean ‘par’?
   51 |     List* lista = (List *) pair->value;
      |                            ^~~~
      |                            par
graph.c:51:28: note: each undeclared identifier is reported only once for each function it appears in
graph.c:58:27: error: expected ‘;’ before ‘}’ token
   58 |     list_pushBack(lista,e)
      |                           ^
      |                           ;
   59 | 
   60 | }
      | ~                          
d7ae5f5
Tue May 12 03:38:10 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:58:27: error: expected ‘;’ before ‘}’ token
   58 |     list_pushBack(lista,e)
      |                           ^
      |                           ;
   59 | 
   60 | }
      | ~                          
af0f27b
Tue May 12 03:38:19 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
651bc05
Tue May 12 03:40:26 PM UTC 2026: 
 graph.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|2
========================================
6dd47e9
Tue May 12 03:48:08 PM UTC 2026: 
 graph.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:72:67: error: ‘label’ undeclared (first use in this function); did you mean ‘label2’?
   72 |     MapPair * par = (MapPair *) map_search(g->adjacencyMap,(void*)label);
      |                                                                   ^~~~~
      |                                                                   label2
graph.c:72:67: note: each undeclared identifier is reported only once for each function it appears in
graph.c:73:28: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   73 |     if(par == NULL) return NULL;
      |                            ^~~~
579e60f
Tue May 12 03:48:26 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:72:67: error: ‘label’ undeclared (first use in this function); did you mean ‘label2’?
   72 |     MapPair * par = (MapPair *) map_search(g->adjacencyMap,(void*)label);
      |                                                                   ^~~~~
      |                                                                   label2
graph.c:72:67: note: each undeclared identifier is reported only once for each function it appears in
62a26c0
Tue May 12 03:48:42 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
014f120
Tue May 12 03:55:02 PM UTC 2026: 
 graph.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  12|0
========================================
1ab04f9
